# bojio

./: .flake8  .gitignore  .pre-commit-checks  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  mypy.ini  poetry_runs.sh  pyproject.toml
ai/ref/bandit_problems/: exercise_2.11.py  fig2.6.py  plot.R  stationary_results.csv
ai/ref/mdps/: GridWorld.py  MDP.py
ai/ref/sutton_rl/chapter_02/: exercise_2.11.py  nonstationary_results.csv  plot.R
bojio/ai/ref/mdps/: GridWorld.py  MDP.py
bojio/ai/ref/sutton_rl/chapter_02/: exercise_2.11.py
bojio/game_engine/core/: Board.py  Game.py  Piece.py  Player.py  Square.py
bojio/game_engine/utils/: utils.py
ch_ss/: __init__.py
ch_ss/game_engine/: __init__.py
ch_ss/game_engine/core/: __init__.py  board.py  game.py  moves_explorer.py  piece.py  player.py  square.py
ch_ss/game_engine/utils/: exceptions.py  gen_moves.py  utils.py
cpp/: Makefile
cpp/include/: config.h  utils.h
cpp/src/: move_generator.cpp  utils.cpp
game_engine/: .gitignore  Board.py  Game.py  Piece.py  Player.py  Square.py  frames2video.sh  main.py  utils.py
game_engine/src/: Board.py  Game.py  Piece.py  Player.py  Square.py
scripts/: repo_checks.sh
tests/: __init__.py  test_Piece.py  test_Square.py  test_bojio.py  test_ch_ss.py  test_piece.py  test_square.py
