[tool.poetry]
name = "ch-ss"
version = "0.1.0"
description = "Python-based chess project, with both game engine and AI bots."
authors = ["Sid <sidmontu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"

[tool.poetry.scripts]
play = "bin.play_game_bin:_main"
ME_bin = "bin.ME_bin:_main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"

